# local-fpt

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: api-coverage.md  compatibility-matrix.md  development.md  testing.md
src/local_fpt/: __init__.py  app.py
src/local_fpt/db/: database.py  models.py
src/local_fpt/query/: operators.py
src/local_fpt/routes/: api3.py  info.py  schema.py
src/local_fpt/seed/: sample_data.py  seed_via_api.py  test_data.py
src/local_fpt/services/: entity_service.py  schema_service.py
tests/: cleanup_cloud.py  conftest.py  helpers.py  test_parity.py  test_rest_api.py
tests/entities/: test_asset.py  test_episode.py  test_humanuser.py  test_playlist.py  test_project.py  test_publishedfile.py  test_sequence.py  test_shot.py  test_task.py  test_ticket.py  test_version.py
